cabal-version:      3.0

name:               plutus-apps-extra
version:            0.1.0.0

author:             Vladimir Sinyakov
                    Grigory Petrov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Constraints.OffChain
      Constraints.OnChain
      Constraints.Prebalance
      IO.ChainIndex
      IO.Time
      IO.Wallet
      Scripts.OneShotCurrency
      Types.Tx
      Utils.Address
      Utils.ChainIndex
      Utils.Orphans
      Utils.Tx
      Utils.Servant
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      cardano-addresses                      -any,
      cardano-api                            -any,
      cardano-crypto-class                   -any,
      cardano-ledger-alonzo                  -any,
      cardano-ledger-babbage                 -any,
      cardano-ledger-byron                   -any,
      cardano-ledger-core                    -any,
      cardano-ledger-shelley                 -any,
      cardano-wallet-core                    -any,
      containers                             -any,
      data-default                           -any,
      directory                              -any,
      either                                 -any,
      exceptions                             -any,
      extra                                  -any,
      file-embed                             -any,
      freer-extras                           -any,
      freer-simple                           -any,
      from-sum                               -any,
      flat                                   -any,
      http-client                            -any,
      lens                                   -any,
      lens-aeson                             -any,
      mtl                                    -any,
      openapi3                               -any,
      playground-common                      -any,
      plutus-contract                        -any,
      plutus-chain-index                     -any,
      plutus-chain-index-core                -any,
      plutus-pab                             -any,
      plutus-tx-plugin                       -any,
      plutus-tx                              -any,
      plutus-tx-extra                        -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-script-utils                    -any,
      plutus-use-cases                       -any,
      purescript-bridge                      -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      servant                                -any,
      servant-client                         -any,
      servant-client-core                    -any,
      text                                   -any,
      text-class                             -any,
      time                                   -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      uuid                                   -any,
    hs-source-dirs: src

test-suite plutus-apps-extra-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -rtsopts
                        -fplugin-opt PlutusTx.Plugin:defer-errors
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  Main-Is:              Main.hs
  Other-Modules:        Tests.ChainIndex
                        Tests.OnChain
                        Tests.Wallet
  Build-Depends:
    base                                   -any,
    aeson                                  -any,
    bytestring                             -any,
    cardano-addresses                      -any,
    cardano-api                            -any,
    cardano-wallet-core                    -any,
    containers                             -any,
    data-default                           -any,
    generic-arbitrary                      -any,
    plutus-apps-extra                      -any,
    plutus-contract                        -any,
    plutus-core                            -any,
    plutus-chain-index                     -any,
    plutus-chain-index-core                -any,
    plutus-tx-plugin                       -any,
    plutus-tx                              -any,
    plutus-tx-extra                        -any,
    plutus-ledger                          -any,
    plutus-ledger-api                      -any,
    plutus-ledger-constraints              -any,
    plutus-script-utils                    -any,
    plutus-use-cases                       -any,
    QuickCheck                             -any,
    random                                 -any,
    text                                   -any