cabal-version:      3.0

name:               plutus-apps-extra
version:            0.1.0.0

author:             Vladimir Sinyakov
                    Grigory Petrov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      PlutusAppsExtra.Constraints.Balance
      PlutusAppsExtra.Constraints.OffChain
      PlutusAppsExtra.Constraints.OnChain
      PlutusAppsExtra.IO.ChainIndex
      PlutusAppsExtra.IO.Blockfrost
      PlutusAppsExtra.IO.Kupo
      PlutusAppsExtra.IO.Node
      PlutusAppsExtra.IO.Time
      PlutusAppsExtra.IO.Wallet
      PlutusAppsExtra.Scripts.CommonValidators
      PlutusAppsExtra.Scripts.OneShotCurrency
      PlutusAppsExtra.Types.Error
      PlutusAppsExtra.Types.Tx
      PlutusAppsExtra.Utils.Address
      PlutusAppsExtra.Utils.ChainIndex
      PlutusAppsExtra.Utils.Blockfrost
      PlutusAppsExtra.Utils.Crypto
      PlutusAppsExtra.Utils.Kupo
      PlutusAppsExtra.Utils.Orphans
      PlutusAppsExtra.Utils.Tx
      PlutusAppsExtra.Utils.Servant
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      cardano-addresses                      -any,
      cardano-api                            -any,
      cardano-crypto-class                   -any,
      cardano-ledger-alonzo                  -any,
      cardano-ledger-babbage                 -any,
      cardano-ledger-byron                   -any,
      cardano-ledger-core                    -any,
      cardano-ledger-shelley                 -any,
      cardano-node-emulator                  -any,
      cardano-streaming                      -any,
      cardano-wallet-core                    -any,
      containers                             -any,
      cryptonite                             -any,
      data-default                           -any,
      directory                              -any,
      either                                 -any,
      exceptions                             -any,
      extra                                  -any,
      file-embed                             -any,
      freer-extras                           -any,
      freer-simple                           -any,
      from-sum                               -any,
      flat                                   -any,
      hex-text                               -any,
      http-client                            -any,
      http-client-tls                        -any,
      http-types                             -any,
      lens                                   -any,
      lens-aeson                             -any,
      memory                                 -any,
      mtl                                    -any,
      openapi3                               -any,
      ouroboros-network                      -any,
      plutus-chain-index                     -any,
      plutus-chain-index-core                -any,
      plutus-contract                        -any,
      plutus-contract-certification          -any,
      plutus-example                         -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-pab                             -any,
      plutus-script-utils                    -any,
      plutus-tx                              -any,
      plutus-tx-constraints                  -any,
      plutus-tx-extra                        -any,
      plutus-tx-plugin                       -any,
      plutus-use-cases                       -any,
      purescript-bridge                      -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      servant                                -any,
      servant-client                         -any,
      servant-client-core                    -any,
      stm                                    -any,
      text                                   -any,
      text-class                             -any,
      time                                   -any,
      transformers                           -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      uuid                                   -any,
    hs-source-dirs: src

test-suite plutus-apps-extra-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -rtsopts
                        -fplugin-opt PlutusTx.Plugin:defer-errors
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  Main-Is:              Main.hs
  Other-Modules:        Tests.ChainIndex
                        Tests.Blockfrost
                        Tests.Kupo
                        Tests.OnChain
                        Tests.Wallet
  Build-Depends:
    base                                   -any,
    aeson                                  -any,
    bytestring                             -any,
    cardano-addresses                      -any,
    cardano-api                            -any,
    cardano-ledger-alonzo                  -any,
    cardano-ledger-core                    -any,
    cardano-node-emulator                  -any,
    cardano-wallet-core                    -any,
    containers                             -any,
    data-default                           -any,
    from-sum                               -any,
    generic-arbitrary                      -any,
    hex-text                               -any,
    plutus-apps-extra                      -any,
    plutus-contract                        -any,
    plutus-core                            -any,
    plutus-chain-index                     -any,
    plutus-chain-index-core                -any,
    plutus-tx-plugin                       -any,
    plutus-tx                              -any,
    plutus-tx-extra                        -any,
    plutus-ledger                          -any,
    plutus-ledger-api                      -any,
    plutus-ledger-constraints              -any,
    plutus-script-utils                    -any,
    plutus-use-cases                       -any,
    QuickCheck                             -any,
    random                                 -any,
    text                                   -any