cabal-version:      3.0

name:               plutus-common
version:            0.1.0.0

author:             Vladimir Sinyakov
                    Grigory Petrov
maintainer:         devteam@cardmix.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      IO.ChainIndex
      IO.Time
      IO.Wallet
      Scripts.Constraints
      Types.TxConstructor
      Utils.Address
      Utils.ByteString
      Utils.Tx
      Utils.Prelude
      Utils.Servant
    other-modules:
      Test.ChainIndex
      Test.Wallet
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      bytestring                             -any,
      cardano-addresses                      -any,
      cardano-api                            -any,
      cardano-ledger-alonzo                  -any,
      cardano-ledger-core                    -any,
      cardano-wallet-core                    -any,
      containers                             -any,
      data-default                           -any,
      directory                              -any,
      extra                                  -any,
      file-embed                             -any,
      freer-extras                           -any,
      freer-simple                           -any,
      from-sum                               -any,
      flat                                   -any,
      http-client                            -any,
      lens                                   -any,
      lens-aeson                             -any,
      memory                                 -any,
      mtl                                    -any,
      openapi3                               -any,
      playground-common                      -any,
      plutus-contract                        -any,
      plutus-chain-index                     -any,
      plutus-chain-index-core                -any,
      plutus-pab                             -any,
      plutus-tx-plugin                       -any,
      plutus-tx                              -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-use-cases                       -any,
      purescript-bridge                      -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      servant                                -any,
      servant-client                         -any,
      text                                   -any,
      text-class                             -any,
      time                                   -any,
      generic-arbitrary                      -any,
      prettyprinter                          -any,
      QuickCheck                             -any,
      uuid                                   -any
    hs-source-dirs: src